src/test/deca/etapeB/invalid/binary_op_bool/inequality_int_string.deca
// Description:
//    Egalité entre int et String
//
// Resultats:
//    Mauvais opérateurs pour l'égalité
// 
// Historique:
//    cree le 01/01/2016

{
    int a = 5;

    if(a != "ok") {};
}
